[project]
name = "qwen_chat_models"
description = "ComfyUI custom nodes for Qwen text and vision-language models. Supports Qwen2.5/Qwen3, 4-/8-bit quantization, deterministic seeding, auto model download, and shared caching to improve workflow performance."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "torchvision", "numpy", "pillow", "huggingface_hub", "transformers", "accelerate", "bitsandbytes", "qwen-vl-utils", "optimum"]

[project.urls]
Repository = "https://github.com/ConstantlyGrowup/ComfyUI_Qwen_chat_models"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ConstantlyGrowup/ComfyUI_Qwen_chat_models/wiki"
"Bug Tracker" = "https://github.com/ConstantlyGrowup/ComfyUI_Qwen_chat_models/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Qwen_chat_models"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

